2008-08-13  Kurt Biery <biery@fnal.gov>

	* tag V01-08-05
	* Added /consumerList web page for Bill Badgett.

2008-06-25  Kurt Biery <biery@fnal.gov>

	* tag V01-08-04
	* Added archiveIntervalDQM configuration parameter to control how often
	  we archive DQM histograms (once every N lumi sections, where
	  archiveIntervalDQM = N)

2008-06-16  Kurt Biery <biery@fnal.gov>

	* tag V01-08-03
	* Modification of the EventServer to match what was run in
	  Cruzet2 (fair-share off, rates limited at the EventServer input, and 
	  events for consumers restricted to a single HLT output module).

2008-05-14  Harry Cheung <cheung@fnal.gov>

	* tag V01-08-02
	* Kurt's changes to include Event Server statistics by HLT output module to enable easier
	  debugging of event rates to DQM consumers

2008-05-11  Harry Cheung <cheung@fnal.gov>

	* tag V01-08-01
	* Fix processing loop so that SMProxy gets INIT message from all Storage Managers else
	  will not receive events from all SMs

2008-05-05  Harry Cheung <cheung@fnal.gov>

	* tag V01-08-00
	* Changes from Kurt for SM selecting on HLT ouptut module ID and INIT message change

2008-04-17  Harry Cheung <cheung@fnal.gov>

	* tag V01-07-00
	* Include stream-based subscriptions and event server statistics monitoring

2008-03-03  Harry Cheung <cheung@fnal.gov>

	* tag V01-06-01
	* Enabled consumers to select an SM stream by the SM streamLabel

2008-02-11  Harry Cheung <cheung@fnal.gov>

	* tag V01-06-00
	* Fix SMProxyServer to handle when there are multiple HLT output modules.

2008-02-02  Harry Cheung <cheung@fnal.gov>

        * tag V01-05-01
        * Fix the monitoring of statistics and allow setting of the maximum
          request rates and server rates in the SMProxyServer XML config file

2008-01-28  Harry Cheung <cheung@fnal.gov>

        * tag V01-05-00
        * Implement SMProxyServer as a pull mode consumer

2007-12-12  Harry Cheung <cheung@fnal.gov>

        * tag V01-04-00